Fix line wrap after dash in code block
Close swcarpentry/styles#249

--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -119,6 +119,7 @@ $codeblock-padding: 5px !default;
 //----------------------------------------
 
 code {
+  white-space: nowrap;
   padding: 2px 5px;
   color: #3d90d9;
   background-color: #e7e7e7;
